using UnityEngine;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
/// <summary>
/// [í†µí•© AI ìŠ¤í¬ë¦½íŠ¸ - ì›ê±°ë¦¬ ìœ ë‹› ë¦¬íŒ©í† ë§]
/// 1. ì›¨ì´í¬ì¸íŠ¸(ìˆœì°°)ì™€ ìŠ¤ìºë„ˆ(ì¶”ì ) ë¡œì§ì€ ìœ ì§€.
/// 2. ì „íˆ¬(HandleCombat) ë¡œì§ì´ ì›ê±°ë¦¬(rangedAttackRange) ê¸°ì¤€ìœ¼ë¡œ ë³€ê²½ë¨.
/// 3. ê³µê²© ì´ë²¤íŠ¸(Event_PerformAttack)ê°€ ê·¼ì ‘ íˆíŠ¸ë°•ìŠ¤ ëŒ€ì‹  [GrowingOrb] í”„ë¦¬í©ì„ ë°œì‚¬í•¨.
/// 4. í”¼ê²© ì‹œ ìŠ¤í„´(ê²½ì§) ë¡œì§ í¬í•¨.
/// </summary>
public class HY_Ranged_EnemyUnitMovement : MonoBehaviour
{
    [Header("ì´ë™ ì„¤ì •")]
    [Tooltip("ê¸°ë³¸ ìˆœì°° ì†ë„")]
    [SerializeField] private float moveSpeed = 3f;
    [Tooltip("ì›¨ì´í¬ì¸íŠ¸ì— ë„ë‹¬í–ˆë‹¤ê³  íŒë‹¨í•˜ëŠ” ê±°ë¦¬")]
    [SerializeField] private float stoppingDistance = 0.5f;

    [Header("ì „íˆ¬ ì„¤ì •")]
    [Tooltip("ì ì„ ë°œê²¬í–ˆì„ ë•Œì˜ ì¶”ê²© ì†ë„")]
    [SerializeField] private float chaseSpeed = 4f;
    
    // [âœ¨ ìˆ˜ì •] ê·¼ì ‘ 'attackRange' -> ì›ê±°ë¦¬ 'rangedAttackRange'
    [Tooltip("ì´ ê±°ë¦¬ ì•ˆìœ¼ë¡œ ë“¤ì–´ì˜¤ë©´ ê³µê²©ì„ ì‹œì‘í•©ë‹ˆë‹¤ (ì›ê±°ë¦¬ìš© 8~10 ì¶”ì²œ)")]
    [SerializeField] private float rangedAttackRange = 8f; 

    // [âœ¨ ìˆ˜ì •] 'enemyMeleeHitboxPrefab' -> 'orbPrefab'
    [Tooltip("ì ì´ ì†Œí™˜í•  [ì„±ì¥í•˜ëŠ” êµ¬ì²´] í”„ë¦¬í© (GrowingOrb.cs í¬í•¨)")]
    [SerializeField] private GameObject orbPrefab; 
    
    [Tooltip("êµ¬ì²´ê°€ ë°œì‚¬ë  ìœ„ì¹˜ (ì—†ìœ¼ë©´ ìœ ë‹› ìœ„ì¹˜)")]
    [SerializeField] private Transform firePoint;

    [Header("ì²´ë ¥ ì„¤ì •")]
    [SerializeField] private int maxHp = 10;
    private int currentHp;
    private bool isLive = true;

    [Header("ì›¨ì´í¬ì¸íŠ¸ ì„¤ì •")]
    [SerializeField] private bool autoFindCircles = true;
    [SerializeField] private Transform[] manualWaypoints;
    public string NodeName;

    [Header("ì»´í¬ë„ŒíŠ¸ (ìë™ ì°¾ê¸°)")]
    [SerializeField] private Animator animator;
    public HY_Scanner scanner; // AIì˜ 'ëˆˆ' ì—­í• 
    private SpriteRenderer spriteRenderer;

    // --- ë‚´ë¶€ ê´€ë¦¬ ë³€ìˆ˜ ---
    private List<Transform> waypoints = new List<Transform>();
    private int currentWaypointIndex = 0;
    private bool hasReachedFinalDestination = false;
    private bool isStunned = false;
    private bool deathReported = false;
    public string enemyID;

    // [âœ¨ ì¶”ê°€] ê³µê²© ì´ë²¤íŠ¸ë¥¼ ìœ„í•´ í˜„ì¬ íƒ€ê²Ÿì„ í´ë˜ìŠ¤ ë³€ìˆ˜ë¡œ ì €ì¥
    private Transform currentTarget; 

    void Start()
    {
        // 1. ì»´í¬ë„ŒíŠ¸ ìë™ ì°¾ê¸° ë° ì´ˆê¸°í™”
        if (animator == null) animator = GetComponent<Animator>();
        if (scanner == null) scanner = GetComponent<HY_Scanner>();
        spriteRenderer = GetComponent<SpriteRenderer>();
        
        currentHp = maxHp; // ì²´ë ¥ ì´ˆê¸°í™”
        isLive = true;

        if (spriteRenderer == null)
        {
            Debug.LogError($"[AI] {name}: SpriteRendererê°€ ì—†ìŠµë‹ˆë‹¤! ì¢Œìš° ë°˜ì „(flipX)ì„ í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤.");
        }

        // 2. ì›¨ì´í¬ì¸íŠ¸(ìˆœì°° ê²½ë¡œ) ì„¤ì • (ë¡œì§ ë™ì¼)
        if (autoFindCircles)
        {
            FindAndSortCircles();
        }
        else if (manualWaypoints != null && manualWaypoints.Length > 0)
        {
            waypoints = new List<Transform>(manualWaypoints);
            Debug.Log($"[AI] {name}: ìˆ˜ë™ ì›¨ì´í¬ì¸íŠ¸ {waypoints.Count}ê°œ ì‚¬ìš©");
        }

        if (waypoints.Count == 0 && autoFindCircles)
        {
             Debug.LogWarning($"[AI] {name}: '{NodeName}'ìœ¼ë¡œ ì‹œì‘í•˜ëŠ” ì›¨ì´í¬ì¸íŠ¸ë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤! (ì œìë¦¬ ëŒ€ê¸°)");
        }
    }

    /// <summary>
    /// AIì˜ ë©”ì¸ ë‘ë‡Œ (ë§¤ í”„ë ˆì„ ì‹¤í–‰)
    /// </summary>
    void Update()
    {
        // [âœ¨ ìˆ˜ì •] ì£½ì—ˆê±°ë‚˜ 'ìŠ¤í„´' ìƒíƒœë©´ ì•„ë¬´ê²ƒë„ í•˜ì§€ ì•ŠìŒ (ì¤‘ë³µ ì²´í¬ ì •ë¦¬)
        if (!isLive || isStunned)
        {
            animator.SetBool("isLive", isLive);
            return;
        }

        // [âœ¨ ìˆ˜ì •] ìŠ¤ìºë„ˆì˜ íƒ€ê²Ÿì„ í´ë˜ìŠ¤ ë³€ìˆ˜ 'currentTarget'ì— ì €ì¥
        currentTarget = scanner.nearestTarget;

        if (currentTarget != null)
        {
            // 2. ì ì´ ìˆë‹¤! (ì „íˆ¬ ëª¨ë“œ: ì¶”ê²© ë˜ëŠ” ê³µê²©)
            HandleCombat(currentTarget);
        }
        else
        {
            // 3. ì ì´ ì—†ë‹¤! (ìˆœì°° ëª¨ë“œ)
            HandlePatrol();
        }
    }

    /// <summary>
    /// (ì „íˆ¬) íƒ€ê²Ÿì„ ì¶”ê²©í•˜ê±°ë‚˜ ê³µê²©í•©ë‹ˆë‹¤.
    /// </summary>
    void HandleCombat(Transform target)
    {
        float distance = Vector3.Distance(transform.position, target.position);
        Vector3 direction = (target.position - transform.position).normalized;

        // [âœ¨ ìˆ˜ì •] 'attackRange' -> 'rangedAttackRange'
        if (distance > rangedAttackRange)
        {
            // --- 1. ì¶”ê²© (Chase) --- (ë¡œì§ ë™ì¼)
            transform.position += direction * chaseSpeed * Time.deltaTime;
            animator.SetFloat("Speed", chaseSpeed);
            
            // [âœ¨ ìˆ˜ì •] ì¢Œìš° ë°˜ì „ í™œì„±í™”
            HandleSpriteFlip(direction.x);
        }
        else
        {
            // --- 2. ê³µê²© (Attack) --- (ë¡œì§ ë™ì¼)
            animator.SetFloat("Speed", 0);
            animator.SetTrigger("Attack");
            
            // [âœ¨ ìˆ˜ì •] ì¢Œìš° ë°˜ì „ í™œì„±í™”
            HandleSpriteFlip(direction.x);
        }
    }

    /// <summary>
    /// (ìˆœì°°) ì›¨ì´í¬ì¸íŠ¸ë¥¼ ë”°ë¼ ì´ë™í•©ë‹ˆë‹¤. (ë¡œì§ ë™ì¼)
    /// </summary>
    void HandlePatrol()
    {
        if (hasReachedFinalDestination || waypoints.Count == 0)
        {
            animator.SetFloat("Speed", 0);
            return;
        }

        Transform targetWaypoint = waypoints[currentWaypointIndex];
        if (targetWaypoint == null)
        {
            currentWaypointIndex++;
            return;
        }

        float distance = Vector3.Distance(transform.position, targetWaypoint.position);

        if (distance <= stoppingDistance)
        {
            OnReachedWaypoint(currentWaypointIndex);
            currentWaypointIndex++;

            if (currentWaypointIndex >= waypoints.Count)
            {
                OnReachedFinalDestination();
            }
            return;
        }

        Vector3 direction = (targetWaypoint.position - transform.position).normalized;
        transform.position += direction * moveSpeed * Time.deltaTime;

        animator.SetFloat("Speed", moveSpeed);
        animator.SetFloat("moveX", direction.x);
        animator.SetFloat("moveY", direction.y);
        
        // [âœ¨ ìˆ˜ì •] ì¢Œìš° ë°˜ì „ í™œì„±í™”
        HandleSpriteFlip(direction.x);
    }

    /// <summary>
    /// ì´ë™ ë°©í–¥(x)ì— ë”°ë¼ ìŠ¤í”„ë¼ì´íŠ¸ë¥¼ ì¢Œìš°ë¡œ ë’¤ì§‘ìŠµë‹ˆë‹¤. (ë¡œì§ ë™ì¼)
    /// </summary>
    void HandleSpriteFlip(float directionX)
    {
        if (spriteRenderer == null) return;

        if (directionX > 0.01f) // ì˜¤ë¥¸ìª½
        {
            spriteRenderer.flipX = false;
        }
        else if (directionX < -0.01f) // ì™¼ìª½
        {
            spriteRenderer.flipX = true;
        }
    }

    // --- ì²´ë ¥ ë° í”¼ê²© ë¡œì§ (ë¡œì§ ë™ì¼) ---

    public void TakeDamage(int damage)
    {
        if (!isLive) return;
        currentHp -= damage;
        if (currentHp <= 0)
        {
            Die();
        }
    }

    public void ApplyStun(float duration)
    {
        if (!isLive) return;
        StartCoroutine(StunRoutine(duration));
    }

    private IEnumerator StunRoutine(float duration)
    {
        isStunned = true;
        animator.SetFloat("Speed", 0);
        yield return new WaitForSeconds(duration);
        isStunned = false;
    }

    public void Die()
    {
        if (!isLive) return;
        isLive = false;
        currentHp = 0;

        animator.SetTrigger("Die");
        if (deathReported) return;
        deathReported = true;

        if (SpawnManager.Instance != null)
            SpawnManager.Instance.OnMonsterDied(enemyID);

        GetComponent<Collider2D>().enabled = false;
        Rigidbody2D rb = GetComponent<Rigidbody2D>();
        if (rb != null)
        {
            rb.linearVelocity = Vector2.zero;
            rb.isKinematic = true;
        }
        
        Destroy(gameObject, 2.0f);
    }

    void OnTriggerEnter2D(Collider2D collision)
    {
        HY_Bullet bullet = collision.GetComponent<HY_Bullet>();
        if (bullet != null)
        {
            TakeDamage(bullet.damage);
            Destroy(bullet.gameObject);
        }
        PlayerMeleeHitbox melee = collision.GetComponent<PlayerMeleeHitbox>();
        if (melee != null)
        {
            TakeDamage(melee.damage);
        }
    }
    // --- ì›¨ì´í¬ì¸íŠ¸ ê´€ë ¨ í—¬í¼ í•¨ìˆ˜ (ë¡œì§ ë™ì¼) ---

    void OnReachedWaypoint(int waypointIndex)
    {
        // Debug.Log($"[AI] {name}: ì›¨ì´í¬ì¸íŠ¸ {waypoints[waypointIndex].name}ì— ë„ì°©!");
    }

    void OnReachedFinalDestination()
    {
        hasReachedFinalDestination = true;
        animator.SetFloat("Speed", 0);
        Debug.Log($"[AI] {name}: ğŸ¯ ìµœì¢… ëª©ì ì§€ ë„ì°©! ìˆœì°°ì„ ì¤‘ë‹¨í•©ë‹ˆë‹¤.");
    }

    void FindAndSortCircles()
    {
        // (Greedy ê²½ë¡œ êµ¬ì„± ë¡œì§ ì „ì²´ ë™ì¼)
        List<Transform> circleList = FindObjectsOfType<Transform>()
            .Where(t => t != null && t.gameObject != null && t.gameObject.name.StartsWith(NodeName))
            .ToList();

        if (circleList.Count == 0)
        {
            waypoints = new List<Transform>();
            Debug.Log($"[AI] {name}: '{NodeName}' ì›¨ì´í¬ì¸íŠ¸ê°€ ì—†ìŠµë‹ˆë‹¤.");
            return;
        }

        Vector3 currentPos = transform.position;
        var remaining = new List<Transform>(circleList);
        var ordered = new List<Transform>(circleList.Count);

        while (remaining.Count > 0)
        {
            Transform next = null;
            float bestSqr = float.PositiveInfinity;

            for (int i = 0; i < remaining.Count; i++)
            {
                Transform cand = remaining[i];
                float sqr = (cand.position - currentPos).sqrMagnitude;
                if (sqr < bestSqr)
                {
                    bestSqr = sqr;
                    next = cand;
                }
            }
            ordered.Add(next);
            remaining.Remove(next);
            currentPos = next.position;
        }
        waypoints = ordered;
        Debug.Log($"[AI] {name}: Greedy ë°©ì‹ìœ¼ë¡œ {waypoints.Count}ê°œì˜ 'Circle' ì›¨ì´í¬ì¸íŠ¸ ê²½ë¡œ êµ¬ì„± ì™„ë£Œ.");
    }

    void OnDrawGizmos()
    {
        // (Gizmos ë¡œì§ ì „ì²´ ë™ì¼)
        if (waypoints == null || waypoints.Count == 0) return;
        Gizmos.color = Color.yellow;
        for (int i = 0; i < waypoints.Count - 1; i++)
        {
            if (waypoints[i] != null && waypoints[i + 1] != null)
            {
                Gizmos.DrawLine(waypoints[i].position, waypoints[i + 1].position);
            }
        }
        if (!hasReachedFinalDestination && currentWaypointIndex < waypoints.Count)
        {
            Transform currentTarget = waypoints[currentWaypointIndex];
            if (currentTarget != null)
            {
                Gizmos.color = Color.green;
                Gizmos.DrawLine(transform.position, currentTarget.position);
            }
        }
    }

    // --- [âœ¨âœ¨âœ¨ í•µì‹¬ ìˆ˜ì • âœ¨âœ¨âœ¨] ---
    /// <summary>
    /// (ì• ë‹ˆë©”ì´ì…˜ ì´ë²¤íŠ¸ì—ì„œ í˜¸ì¶œë¨)
    /// 'GrowingOrb' í”„ë¦¬í©ì„ ë°œì‚¬í•˜ê³  íƒ€ê²Ÿì„ ì„¤ì •í•©ë‹ˆë‹¤.
    /// </summary>
    public void Event_PerformAttack()
    {
        Debug.Log($"[AI] {name}ì´(ê°€) Event_PerformAttack()ë¥¼ í˜¸ì¶œ (ì›ê±°ë¦¬ ê³µê²©)!");
        
        // 1. ì†Œí™˜í•  [êµ¬ì²´] í”„ë¦¬í©ì´ ì„¤ì •ë˜ì–´ ìˆëŠ”ì§€ í™•ì¸
        if (orbPrefab == null)
        {
            Debug.LogError(name + ": orbPrefabì´ ì„¤ì •ë˜ì§€ ì•Šì•˜ìŠµë‹ˆë‹¤!");
            return;
        }

        // 2. ê³µê²© ì• ë‹ˆë©”ì´ì…˜ì´ ì‹œì‘ëœ í›„ íƒ€ê²Ÿì´ ì‚¬ë¼ì¡ŒëŠ”ì§€ í™•ì¸
        if (currentTarget == null) 
        {
            Debug.LogWarning(name + ": êµ¬ì²´ë¥¼ ë°œì‚¬í•˜ë ¤ í–ˆìœ¼ë‚˜ íƒ€ê²Ÿì´ ì‚¬ë¼ì¡ŒìŠµë‹ˆë‹¤.");
            return;
        }

        // 3. êµ¬ì²´ ë°œì‚¬ ìœ„ì¹˜ ê²°ì • (FirePointê°€ ìˆìœ¼ë©´ ê±°ê¸°, ì—†ìœ¼ë©´ ë‚´ ìœ„ì¹˜)
        Vector3 spawnPosition = (firePoint != null) ? firePoint.position : transform.position;
        Quaternion spawnRotation = (firePoint != null) ? firePoint.rotation : transform.rotation;

        // 4. êµ¬ì²´ë¥¼ 'ì†Œí™˜(Instantiate)'
        GameObject orbGO = Instantiate(orbPrefab, spawnPosition, spawnRotation);

        // 5. êµ¬ì²´ì—ì„œ 'GrowingOrb' ìŠ¤í¬ë¦½íŠ¸ë¥¼ ê°€ì ¸ì˜µë‹ˆë‹¤.
        //    (ìŠ¤í¬ë¦½íŠ¸ ì´ë¦„ì´ GrowingOrb.csë¼ê³  ê°€ì •)
        GrowingOrb orbScript = orbGO.GetComponent<GrowingOrb>();

        // 6. [ê°€ì¥ ì¤‘ìš”!] êµ¬ì²´ ìŠ¤í¬ë¦½íŠ¸ê°€ ì¡´ì¬í•œë‹¤ë©´
        if (orbScript != null)
        {
            // 7. "êµ¬ì²´ì•¼! ë„ˆì˜ íƒ€ê²Ÿì€ 'currentTarget'ì´ì•¼!" ë¼ê³  ì•Œë ¤ì¤ë‹ˆë‹¤.
            orbScript.SetTarget(currentTarget);
            Debug.Log($"[AI] {name}ì´(ê°€) {currentTarget.name}ì„(ë¥¼) í–¥í•´ êµ¬ì²´ë¥¼ ë°œì‚¬í•©ë‹ˆë‹¤!");
        }
        else
        {
            Debug.LogError($"[AI] {name}: ë°œì‚¬í•œ êµ¬ì²´ í”„ë¦¬í©ì— GrowingOrb.cs ìŠ¤í¬ë¦½íŠ¸ê°€ ì—†ìŠµë‹ˆë‹¤!");
        }
    }
}