using UnityEngine;
using System.Collections;
using System.Collections.Generic;
using System.Linq;

/// <summary>
/// [í†µí•© AI ìŠ¤í¬ë¦½íŠ¸ - ì›ê±°ë¦¬ ìœ ë‹› ë¦¬íŒ©í† ë§]
/// [ğŸ”§ ìˆ˜ì •] Event_PerformAttackì—ì„œ êµ¬ì²´ íƒ€ì…ì„ ìë™ìœ¼ë¡œ ê°ì§€í•˜ë„ë¡ ê°œì„ 
/// </summary>
public class HY_Ranged_EnemyUnitMovement : MonoBehaviour, ISlowable
{
    [Header("ì´ë™ ì„¤ì •")]
    [Tooltip("ê¸°ë³¸ ìˆœì°° ì†ë„")]
    [SerializeField] private float moveSpeed = 3f;
    [Tooltip("ì›¨ì´í¬ì¸íŠ¸ì— ë„ë‹¬í–ˆë‹¤ê³  íŒë‹¨í•˜ëŠ” ê±°ë¦¬")]
    [SerializeField] private float stoppingDistance = 0.5f;

    [Header("ìƒíƒœ ì´ìƒ ì„¤ì •")]
    [Tooltip("í˜„ì¬ ì†ë„ ë°°ìœ¨ (1.0 = ì •ìƒ, 0.5 = ì ˆë°˜ ì†ë„)")]
    [SerializeField] public float speedMultiplier = 1.0f;

    [Header("ì „íˆ¬ ì„¤ì •")]
    [Tooltip("ì ì„ ë°œê²¬í–ˆì„ ë•Œì˜ ì¶”ê²© ì†ë„")]
    [SerializeField] private float chaseSpeed = 4f;
    
    [Tooltip("ì´ ê±°ë¦¬ ì•ˆìœ¼ë¡œ ë“¤ì–´ì˜¤ë©´ ê³µê²©ì„ ì‹œì‘í•©ë‹ˆë‹¤ (ì›ê±°ë¦¬ìš© 8~10 ì¶”ì²œ)")]
    [SerializeField] private float rangedAttackRange = 8f; 

    [Tooltip("ì ì´ ì†Œí™˜í•  êµ¬ì²´ í”„ë¦¬í© (GrowingOrb ë˜ëŠ” HY_Orb ìŠ¤í¬ë¦½íŠ¸ í¬í•¨)")]
    [SerializeField] private GameObject orbPrefab; 
    
    [Tooltip("êµ¬ì²´ê°€ ë°œì‚¬ë  ìœ„ì¹˜ (ì—†ìœ¼ë©´ ìœ ë‹› ìœ„ì¹˜)")]
    [SerializeField] private Transform firePoint;

    [Header("ì²´ë ¥ ì„¤ì •")]
    [SerializeField] private int maxHp = 10;
    private int currentHp;
    private bool isLive = true;

    [Header("ì›¨ì´í¬ì¸íŠ¸ ì„¤ì •")]
    [SerializeField] private bool autoFindCircles = true;
    [SerializeField] private Transform[] manualWaypoints;
    public string NodeName;

    [Header("ì»´í¬ë„ŒíŠ¸ (ìë™ ì°¾ê¸°)")]
    [SerializeField] private Animator animator;

    [SerializeField] private HY_SmoothHealthBar healthBar;
    public HY_Scanner scanner;
    private SpriteRenderer spriteRenderer;

    private float _originalSpeedMultiplier;
    private List<Transform> waypoints = new List<Transform>();
    private int currentWaypointIndex = 0;
    private bool hasReachedFinalDestination = false;
    private bool isStunned = false;
    private bool deathReported = false;
    public string enemyID;

    private float attackCooldown = 2.0f;
    private float lastAttackTime = 0f;
    private int slowDebuffCount = 0; // [ì¶”ê°€] ì¤‘ì²© ì¹´ìš´íŠ¸
    private Transform currentTarget;

    void Start()
    {
        if (animator == null) animator = GetComponent<Animator>();
        if (scanner == null) scanner = GetComponent<HY_Scanner>();
        spriteRenderer = GetComponent<SpriteRenderer>();
        
        currentHp = maxHp;
        
       if (healthBar != null)
        {
            healthBar.SetHealth(currentHp, maxHp);
        }

        isLive = true;
        _originalSpeedMultiplier = speedMultiplier; // ì›ë˜ ì†ë„ ë°°ìœ¨ ì €ì¥

        if (spriteRenderer == null)
        {
            Debug.LogError($"[AI] {name}: SpriteRendererê°€ ì—†ìŠµë‹ˆë‹¤!");
        }

        if (autoFindCircles)
        {
            FindAndSortCircles();
        }
        else if (manualWaypoints != null && manualWaypoints.Length > 0)
        {
            waypoints = new List<Transform>(manualWaypoints);
            Debug.Log($"[AI] {name}: ìˆ˜ë™ ì›¨ì´í¬ì¸íŠ¸ {waypoints.Count}ê°œ ì‚¬ìš©");
        }

        if (waypoints.Count == 0 && autoFindCircles)
        {
             Debug.LogWarning($"[AI] {name}: '{NodeName}'ìœ¼ë¡œ ì‹œì‘í•˜ëŠ” ì›¨ì´í¬ì¸íŠ¸ë¥¼ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤!");
        }
    }

    void Update()
    {
        if (!isLive || isStunned)
        {
            animator.SetBool("isLive", isLive);
            return;
        }

        currentTarget = scanner.nearestTarget;

        if (currentTarget != null)
        {
            HandleCombat(currentTarget);
        }
        else
        {
            HandlePatrol();
        }
    }

    void HandleCombat(Transform target)
    {
        float distance = Vector3.Distance(transform.position, target.position);
        Vector3 direction = (target.position - transform.position).normalized;

        if (distance > rangedAttackRange)
        {
            transform.position += direction * chaseSpeed * Time.deltaTime;
            animator.SetFloat("Speed", chaseSpeed);
        }
        else
        {
            animator.SetFloat("Speed", 0);
            
            if (Time.time >= lastAttackTime + attackCooldown)
            {
                lastAttackTime = Time.time;
                animator.SetTrigger("Attack");
                Debug.Log($"[AI] {name}: ê³µê²© íŠ¸ë¦¬ê±° ì‹¤í–‰! (íƒ€ê²Ÿ: {target.name})");
            }
        }
        animator.SetFloat("moveX", direction.x);
        animator.SetFloat("moveY", direction.y);
    }

    void HandlePatrol()
    {
        if (hasReachedFinalDestination || waypoints.Count == 0)
        {
            animator.SetFloat("Speed", 0);
            return;
        }

        Transform targetWaypoint = waypoints[currentWaypointIndex];
        if (targetWaypoint == null)
        {
            currentWaypointIndex++;
            return;
        }

        float distance = Vector3.Distance(transform.position, targetWaypoint.position);

        if (distance <= stoppingDistance)
        {
            OnReachedWaypoint(currentWaypointIndex);
            currentWaypointIndex++;

            if (currentWaypointIndex >= waypoints.Count)
            {
                OnReachedFinalDestination();
            }
            return;
        }

        Vector3 direction = (targetWaypoint.position - transform.position).normalized;
        float currentMoveSpeed = moveSpeed * speedMultiplier;
        transform.position += direction * currentMoveSpeed * Time.deltaTime;

        animator.SetFloat("Speed", currentMoveSpeed);
        animator.SetFloat("moveX", direction.x);
        animator.SetFloat("moveY", direction.y);
    }

    void HandleSpriteFlip(float directionX)
    {
        if (spriteRenderer == null) return;

        if (directionX > 0.01f)
        {
            spriteRenderer.flipX = false;
        }
        else if (directionX < -0.01f)
        {
            spriteRenderer.flipX = true;
        }
    }

    public void TakeDamage(int damage)
    {
        if (!isLive) return;
        currentHp -= damage;
        if (healthBar != null)
        {
            healthBar.SetHealth(currentHp, maxHp);
        }
        if (currentHp <= 0)
        {
            Die();
        }
    }

    public void ApplyStun(float duration)
    {
        if (!isLive) return;
        StartCoroutine(StunRoutine(duration));
    }

    private IEnumerator StunRoutine(float duration)
    {
        isStunned = true;
        animator.SetFloat("Speed", 0);
        yield return new WaitForSeconds(duration);
        isStunned = false;
    }

    public void Die()
    {
        if (!isLive) return;
        isLive = false;
        currentHp = 0;

        animator.SetTrigger("Die");
        if (deathReported) return;
        deathReported = true;

        if (SpawnManager.Instance != null)
            SpawnManager.Instance.OnMonsterDied(enemyID);

        GetComponent<Collider2D>().enabled = false;
        Rigidbody2D rb = GetComponent<Rigidbody2D>();
        if (rb != null)
        {
            rb.linearVelocity = Vector2.zero;
            rb.isKinematic = true;
        }
        
        Destroy(gameObject, 2.0f);
    }

    void OnTriggerEnter2D(Collider2D collision)
    {
        HY_Bullet bullet = collision.GetComponent<HY_Bullet>();
        if (bullet != null)
        {
            TakeDamage(bullet.damage);
            Destroy(bullet.gameObject);
        }

        PlayerMeleeHitbox melee = collision.GetComponent<PlayerMeleeHitbox>();
        if (melee != null)
        {
            TakeDamage(melee.damage);
        }
    }

    void OnReachedWaypoint(int waypointIndex)
    {
        // Debug.Log($"[AI] {name}: ì›¨ì´í¬ì¸íŠ¸ ë„ì°©!");
    }

    void OnReachedFinalDestination()
    {
        hasReachedFinalDestination = true;
        animator.SetFloat("Speed", 0);
        Debug.Log($"[AI] {name}: ğŸ¯ ìµœì¢… ëª©ì ì§€ ë„ì°©!");
    }

    void FindAndSortCircles()
    {
        List<Transform> circleList = FindObjectsOfType<Transform>()
            .Where(t => t != null && t.gameObject != null && t.gameObject.name.StartsWith(NodeName))
            .ToList();

        if (circleList.Count == 0)
        {
            waypoints = new List<Transform>();
            Debug.Log($"[AI] {name}: '{NodeName}' ì›¨ì´í¬ì¸íŠ¸ê°€ ì—†ìŠµë‹ˆë‹¤.");
            return;
        }

        Vector3 currentPos = transform.position;
        var remaining = new List<Transform>(circleList);
        var ordered = new List<Transform>(circleList.Count);

        while (remaining.Count > 0)
        {
            Transform next = null;
            float bestSqr = float.PositiveInfinity;

            for (int i = 0; i < remaining.Count; i++)
            {
                Transform cand = remaining[i];
                float sqr = (cand.position - currentPos).sqrMagnitude;
                if (sqr < bestSqr)
                {
                    bestSqr = sqr;
                    next = cand;
                }
            }
            ordered.Add(next);
            remaining.Remove(next);
            currentPos = next.position;
        }
        waypoints = ordered;
        Debug.Log($"[AI] {name}: {waypoints.Count}ê°œì˜ ì›¨ì´í¬ì¸íŠ¸ ê²½ë¡œ êµ¬ì„± ì™„ë£Œ.");
    }

    void OnDrawGizmos()
    {
        if (waypoints == null || waypoints.Count == 0) return;
        Gizmos.color = Color.yellow;
        for (int i = 0; i < waypoints.Count - 1; i++)
        {
            if (waypoints[i] != null && waypoints[i + 1] != null)
            {
                Gizmos.DrawLine(waypoints[i].position, waypoints[i + 1].position);
            }
        }
        if (!hasReachedFinalDestination && currentWaypointIndex < waypoints.Count)
        {
            Transform currentWaypoint = waypoints[currentWaypointIndex];
            if (currentWaypoint != null)
            {
                Gizmos.color = Color.green;
                Gizmos.DrawLine(transform.position, currentWaypoint.position);
            }
        }
        
        // ğŸ”§ ê³µê²© ë²”ìœ„ ì‹œê°í™” ì¶”ê°€
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, rangedAttackRange);
    }

    /// <summary>
    /// [ğŸ”§ í•µì‹¬ ìˆ˜ì •!] ì• ë‹ˆë©”ì´ì…˜ ì´ë²¤íŠ¸ì—ì„œ í˜¸ì¶œ
    /// GrowingOrb ë˜ëŠ” HY_Orbë¥¼ ìë™ìœ¼ë¡œ ê°ì§€í•˜ì—¬ ë°œì‚¬
    /// </summary>
    public void Event_PerformAttack()
    {
        Debug.Log($"[AI ğŸ¯] {name}: Event_PerformAttack() í˜¸ì¶œë¨!");
        
        // 1. í”„ë¦¬íŒ¹ í™•ì¸
        if (orbPrefab == null)
        {
            Debug.LogError($"[AI âŒ] {name}: orbPrefabì´ Inspectorì— í• ë‹¹ë˜ì§€ ì•Šì•˜ìŠµë‹ˆë‹¤!");
            return;
        }

        // 2. íƒ€ê²Ÿ í™•ì¸
        if (currentTarget == null) 
        {
            Debug.LogWarning($"[AI âš ï¸] {name}: íƒ€ê²Ÿì´ ì‚¬ë¼ì¡ŒìŠµë‹ˆë‹¤.");
            return;
        }

        // 3. ë°œì‚¬ ìœ„ì¹˜ ê²°ì •
        Vector3 spawnPosition = (firePoint != null) ? firePoint.position : transform.position;
        Quaternion spawnRotation = (firePoint != null) ? firePoint.rotation : transform.rotation;

        Debug.Log($"[AI ğŸ“] {name}: êµ¬ì²´ ìƒì„± ìœ„ì¹˜: {spawnPosition}");

        // 4. êµ¬ì²´ ìƒì„±
        GameObject orbGO = Instantiate(orbPrefab, spawnPosition, spawnRotation);
        
        if (orbGO == null)
        {
            Debug.LogError($"[AI âŒ] {name}: êµ¬ì²´ ìƒì„± ì‹¤íŒ¨!");
            return;
        }

        Debug.Log($"[AI âœ…] {name}: êµ¬ì²´ ìƒì„± ì„±ê³µ! (ì˜¤ë¸Œì íŠ¸: {orbGO.name})");

        // 5. [ğŸ”§ í•µì‹¬ ìˆ˜ì •!] êµ¬ì²´ íƒ€ì…ì„ ìë™ìœ¼ë¡œ ê°ì§€
        bool targetSet = false;

        // 5-1. GrowingOrb ì‹œë„
        GrowingOrb growingOrb = orbGO.GetComponent<GrowingOrb>();
        if (growingOrb != null)
        {
            growingOrb.SetTarget(currentTarget);
            targetSet = true;
            Debug.Log($"[AI âœ…] {name}: GrowingOrb íƒ€ì… êµ¬ì²´ ë°œì‚¬! (íƒ€ê²Ÿ: {currentTarget.name})");
        }

        // 5-2. HY_Orb ì‹œë„
        if (!targetSet)
        {
            HY_Orb hyOrb = orbGO.GetComponent<HY_Orb>();
            if (hyOrb != null)
            {
                hyOrb.SetTarget(currentTarget);
                targetSet = true;
                Debug.Log($"[AI âœ…] {name}: HY_Orb íƒ€ì… êµ¬ì²´ ë°œì‚¬! (íƒ€ê²Ÿ: {currentTarget.name})");
            }
        }

        // 5-3. ë‘˜ ë‹¤ ì—†ìœ¼ë©´ ì—ëŸ¬
        if (!targetSet)
        {
            Debug.LogError($"[AI âŒ] {name}: êµ¬ì²´ í”„ë¦¬íŒ¹ì— 'GrowingOrb' ë˜ëŠ” 'HY_Orb' ìŠ¤í¬ë¦½íŠ¸ê°€ ì—†ìŠµë‹ˆë‹¤!");
            Destroy(orbGO);
            return;
        }

        Debug.Log($"[AI ğŸš€] {name}: êµ¬ì²´ê°€ {currentTarget.name}ì„ í–¥í•´ ë°œì‚¬ë˜ì—ˆìŠµë‹ˆë‹¤!");
    }
    public void ApplySlow(float ratio)
    {
        slowDebuffCount++; 

        if (slowDebuffCount == 1 || speedMultiplier > ratio)
        {
            speedMultiplier = ratio;
        }
    }

    public void RemoveSlow()
    {
        slowDebuffCount--;

        if (slowDebuffCount <= 0)
        {
            slowDebuffCount = 0;
            speedMultiplier = _originalSpeedMultiplier;
        }
    }
}
